--- a/Local-Storage-HTML-JAVASCRIPT-main/telaCadastro/cadastroUsuario.html
+++ b/Local-Storage-HTML-JAVASCRIPT-main/telaCadastro/cadastroUsuario.html
@@ -38,27 +38,33 @@
     <form onsubmit="return cadastrarUsuario()">
         <div style="text-decoration: underline; color: white; text-align: center">Formulário para cadastro de usuário</div><br>
 
-        <input required minlength="3" maxlength="150" type="text" placeholder="Nome completo" id="nomeCompletoCadastro" style="margin-left: 44%;"/> <!--PLACEHOLDER: nome que aparece enquanto o usuário 
+        <input required id="nomeCompletoCadastro" minlength="3" maxlength="150" type="text" placeholder="Nome completo" style="margin-left: 44%;"/> <!--PLACEHOLDER: nome que aparece enquanto o usuário 
                                                         não digita nada no campo de texto-->
         <br>
-        <input required type="date" placeholder="Data de nascimento" id="dataNascimentoCadastro" style="margin-left: 46%;"/> <!--placeholder não aparece pois a tag "date" 
+        <input required id="dataNascimentoCadastro" type="date" placeholder="Data de nascimento" style="margin-left: 44%; padding-right: 61px;" /> <!--placeholder não aparece pois a tag "date" 
                                                         ja possui um placeholder pré-definido-->
         <br>
 
-        <input required type="text" placeholder="CPF" id="cpfCadastro" style="margin-left: 44%;"/>
+        <input required id="cpfCadastro" minlength="14" maxlength="14" type="text" placeholder="CPF" id="cpfCadastro" style="margin-left: 44%;"/>
         <br>
 
-        <select id="generoCadastro"> <!--PARA SELEÇÃO DE INFORMAÇÕES/ESCOLHA DE UMA OPÇÃO-->
+        <select id="generoCadastro" style="margin-left: 44%; padding-right: 92px;"> <!--PARA SELEÇÃO DE INFORMAÇÕES/ESCOLHA DE UMA OPÇÃO-->
             <option>Gênero</option>
             <option>Masculino</option>
             <option>Feminino</option>
             <option>Outros</option>
         </select>
 
-        <input required type="email" placeholder="Email" id="emailCadastro" style="margin-left: 44%;"/>
+        <input required id="emailCadastro" type="email" placeholder="Email" style="margin-left: 44%;"/>
         <br>
 
-        <input required  type="password" placeholder="Senha" id="senhaCadastro" style="margin-left: 44%;"/>
+        <input required id="senhaCadastro" type="password" placeholder="Senha" style="margin-left: 44%;"/>
+        <br>
+
+        <input required id="fotoCadastro" type="text" placeholder="Foto para perfil" style="margin-left: 44%;"/>
+        <br>
+        <br>
+
         <!--REQUIRED obriga o usuário a preencher o campo para continuar com o cadastro 
             (serve para todos os tipos de INPUT (text, number, file, email, data, etc...))-->
         <!--MINLENGTH dá um MÍNIMO de CARACTERES que o campo deve ter para continuar com o cadastro-->
@@ -66,7 +72,6 @@
 
         <!--MIN dá um MÍNIMO de NÚMEROS que o campo deve ter para continuar com o cadastro-->
         <!--MAX dá um MÁXIMO de NÚMEROS que o campo deve ter para continuar com o cadastro-->
-        <br>
 
     <button style="margin-left: 48%;">Cadastrar</button>
     </form>
